# moodle-api-python-wrapper

./: .gitignore  API_Cookbook_With.ipynb  LICENSE  Moodle_Access_Cookbook.ipynb  README.md  item_response_prediction.ipynb  pyproject.toml
item_response_prediction/: core.py
moodle_api_python_wrapper/: __init__.py  core.py
