[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-api-python-wrapper"
version = "0.1.0"
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Mugalan", email = "mugalan@gmail.com" }
]
dependencies = [
  "numpy>=1.21"
]

# Make Plotly optional (install with: pip install moodle-api-python-wrapper[plotting])
[project.optional-dependencies]
plotting = ["plotly>=5.0"]

[project.urls]
Repository = "https://github.com/mugalan/moodle-api-python-wrapper"

[tool.setuptools]
packages = ["moodle_api_python_wrapper"]

